package clack.message;

public class FileMessage extends Message
{
    public FileMessage(String username, MsgTypeEnum msgTypeEnum)
    {
        super(username, msgTypeEnum);
    }
}
