package clack.message;

public enum MsgTypeEnum
{
    LISTUSERS,
    LOGOUT,
    TEXT,
    LOGIN,
    OPTION,
    FILE,
    HELP
}
