package clack.message;

public enum OptionEnum
{
    CIPHER_KEY,
    CIPHER_ENABLE,
    CIPHER_NAME
}
